--- a/style.css
+++ b/style.css
@@ -4,7 +4,7 @@
 
 .header {
 		height: 100vh;
-		background-image: url(../img/background.png);
+		background-image: url(img/background.png);
 		background-size: cover;
 		background-position: center;
 	}
@@ -211,7 +211,7 @@
 @media all and (max-width: 768px) {
 
 	.header {
-		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/background.png);	
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background.png);	
 	}
 	
 	.info-header{
@@ -244,7 +244,7 @@
 	
 	.header {
 		height: 100vh;
-		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/background.png);
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background.png);
 		background-size: cover;
 		background-position: center;
 	}
