--- a/style.css
+++ b/style.css
@@ -3,190 +3,307 @@
 }
 
 .header {
-		height: 100vh;
-		background-image: url(img/background.png);
-		background-size: cover;
-		background-position: center;
-	}
-
-	.navbar-expand-md{
-		padding-left: 45px;
-		padding-right: 45px;
-	}
-	.info-header{
-		margin-top: 200px;
-		margin-left: 15px;
-	}
-
-	.info-header h1{
-		font-weight: 700;
-		font-size: 60px;
-	}
-
-	.about-us-wrapper{
-		text-align: left;
-		padding-bottom: 20px;
-		align-self: center;
-
-	}
-
-	.about-us-wrapper h2{
-		font-size: 70px;
-		font-weight: 700;
-		color: #fff;
-	}
-
-	.about-us-wrapper small{
-		font-size: 16px;
-		color: #ffffff;
-	}
-
-	.info-header p{
-		text-shadow: 0px 0px 1px #ffffff;
-	}
-
-	.our-services .btn{
-		width:  100%;
-	}
-	
-	.our-services-wrapper{
-		align-self:  center;
-
-	}
-	.our-services-wrapper h3{
-		font-size: 60px;
-		font-weight: 700;
-		position: absolute;
-		color: #fff;
-		white-space: nowrap;
-		top: 50%;
-		left: 50%;
-		transform: translate(-50%, -50%);
-		text-shadow: 1px 2px 5px #000000;
-	}
-
-	.btns-wrapper{
-		margin-top: 10px;
-		margin-bottom: 10px;
-	}	
-
-	.btn{
-		margin-left: auto;
-		margin-right: auto;
-	}
-
-	.about-us{
-		background-color:  #00c4c4;
-	}
-
-	.our-services{
-		background-color:  #70bfff;;
-	}
-
-	.info-header h1{
-		font-weight: 700;
-		font-size: 60px;
-	}
-
-	.info-header p{
-		font-size: 17px;
-		font-weight: 300;
-		line-height: 27px;
-	}
-
-	.info-header .btn{
-		background-color:  #ff6033;
-		width: 200px;
-		height: 55px;
-		color: #fff;
-		font-weight: 300;
-		font-size: 16px;
-		border-radius: 0;
-		margin-top: 20px;
-		box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-	}
-
-	.mouse-icon{
-		position: absolute;
-		left: 50%;
-		bottom: 40px;
-	}
-
-	.our-services .btn{
-		font-size: 20px;
-		white-space: normal;
-		width:  80%;
-		display: flex;
-		height: 100px;
-		padding: 0;
-		border: none;
-		border-radius: 0;
-		justify-content: space-between;
-		align-items: center;
-		margin-top: 20px;
-		box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
-		color: #262626;
-		font-weight: 700;
-	}
-
-	.btn-label{
-		display: flex;
-		width: 25%;
-		height: 100px;
-		align-items: center;
-		justify-content: center;
-		border-left: 1px solid #929292;
-		border-radius: 0;
-	}
-
-	.txt-btn{
-		width: 75%;
-		margin-left: auto;
-		margin-right: auto;
-		padding-left: 10px;
-		padding-right: 10px;
-	}
-
-	.btns-wrapper{
-		margin-top: 40px;
-		margin-bottom: 40px;
-	}
-	
-	.gallery{
-		background-color: #ffe92f;
-	}
-
-	h4{
-		color: #262626;
-		font-size: 90px;
-		font-weight: 700;
-	}
-
-	.row{
-		padding: 0;
-		margin: 0;
-		justify-content: space-around;
-	}
-
-	
-.gallery, .our-services, .about-us .container-fluid{
-	padding: 70px;
+	height: 100vh;
+	background-image: url(../img/background.png);
+	background-size: cover;
+	background-position: center;
 }
 
-.gallery .col-12{
+.navbar{
+	padding-left: 45px;
+	padding-right: 45px;
+}
+
+.info-header{
+	margin-top: 200px;
+	margin-left: 15px;
+}
+
+.info-header h1{
+	font-weight: 700;
+	font-size: 60px;
+}
+
+.about-us-wrapper{
+	text-align: left;
+	padding-bottom: 20px;
+	align-self: center;
+}
+
+.about-us-wrapper h1{
+	font-size: 70px;
+	font-weight: 700;
+	color: #fff;
+}
+
+.about-us-wrapper small{
+	font-size: 16px;
+	color: #ffffff;
+}
+
+.info-header p{
+	text-shadow: 0px 0px 1px #ffffff;
+}
+
+.our-services .btn{
+	width:  100%;
+}
+
+.our-services-wrapper{
+	align-self:  center;
+
+}
+.our-services-wrapper h1{
+	font-size: 60px;
+	font-weight: 700;
+	position: absolute;
+	color: #fff;
+	white-space: nowrap;
+	top: 50%;
+	left: 50%;
+	transform: translate(-50%, -50%);
+	text-shadow: 1px 2px 5px #000000;
+}
+
+.our-services .btn{
+	margin-left: auto;
+	margin-right: auto;
+}
+
+.about-us{
+	background-color:  #00c4c4;
+}
+
+.our-services{
+	background-color:  #70bfff;;
+}
+
+.info-header p{
+	font-size: 17px;
+	font-weight: 300;
+	line-height: 27px;
+}
+
+.info-header .btn{
+	background-color:  #ff6033;
+	width: 200px;
+	height: 55px;
+	color: #fff;
+	font-weight: 300;
+	font-size: 16px;
+	border-radius: 0;
+	margin-top: 20px;
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.mouse-icon{
+	position: absolute;
+	left: 50%;
+	bottom: 40px;
+}
+
+.our-services .btn{
+	font-size: 20px;
+	white-space: normal;
+	width:  80%;
+	display: flex;
+	height: 100px;
+	padding: 0;
+	border: none;
+	border-radius: 0;
+	justify-content: space-between;
+	align-items: center;
+	margin-top: 20px;
+	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
+	color: #262626;
+	font-weight: 700;
+}
+
+.btn-label{
+	display: flex;
+	width: 25%;
+	height: 100px;
+	align-items: center;
+	justify-content: center;
+	border-left: 1px solid #929292;
+	border-radius: 0;
+}
+
+.txt-btn{
+	width: 75%;
+	margin-left: auto;
+	margin-right: auto;
+	padding-left: 10px;
+	padding-right: 10px;
+}
+
+.btns-wrapper{
+	margin-top: 40px;
+	margin-bottom: 40px;
+}
+
+.gallery{
+	background-color: #ffe92f;
+}
+
+.gallery h1{
+	color: #262626;
+	font-size: 90px;
+	font-weight: 700;
+}
+
+.row{
+	padding: 0;
+	margin: 0;
+	justify-content: center;
+}
+
+	
+.gallery, .our-services, .blog, .contact, .about-us .container-fluid{
+	padding: 60px;
+}
+
+.gallery .col-8{
 	margin-bottom: 50px;
 }
-
 .gallery small{
 	font-size: 16px;
 		color: #000000;
 }
 
+.gallery .container-fluid div.row:last-child{
+	padding-top: 30px;
+}
 
+.gallery .btn{
+	background-color:  #5585a2;
+	width: 200px;
+	height: 45px;
+	color: #fff;
+	font-weight: 300;
+	font-size: 16px;
+	border-radius: 0;
+	margin: 30px;
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+}
 
+section.subscribe{
+	background: url(../img/subscribe-background.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
+}
 
+.subscribe h1{
+	color: #262626;
+	font-size: 40px;
+}
+.subscribe small{
+	color: #262626;
+	font-size: 17px
+}
 
+.subscribe-row{
+	padding: 100px;
+}
+
+.subscribe input{
+	border-radius: 0;
+	border: 1px solid #262626;
+}
+
+.subscribe .btn{
+	background-color: #96b92c;
+	border-radius: 0;
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+	color: #ffffff;
+
+}
+
+.blog{
+	background-color: #b07cf7;
+}
+
+.blog h1{
+	color:  #ffffff;
+	font-size: 90px;
+}
+
+.blog small{
+	color: #ffffff;
+	font-size: 17px;
+	font-weight: 300;
+	text-align: justify;
+}
+
+.blog .btn{
+	background-color:  #f72b3b;
+	width: 200px;
+	height: 45px;
+	color: #fff;
+	font-weight: 300;
+	font-size: 16px;
+	border-radius: 0;
+	margin-bottom: 50px;
+	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
+}
+
+.contact{
+	background: url(../img/contact-background.png);
+	background-repeat: no-repeat;
+	background-position: center;
+	background-size: cover;
 	
+}
+.contact h1{
+	color:  #000000;
+	font-size: 90px;
+}
+
+.contact small{
+	color: #000000;
+	font-size: 17px;
+	font-weight: 300;
+	text-align: justify;
+}
+
+	footer{
+		background-color: #262626;
+		color: #b9b9b9;
+		font-size: 16px;
+	}
+footer span{
+	color: red;
+}
+footer p{
+	margin: 0;
+	padding: 0;
+	line-height: 27px;
+}
+
+.contact .form-control{
+	margin: 10px;
+	border-radius: 0;
+	background-color:  rgba(0, 196, 196, 0.3);
+	font-size: 17px;
+}
+
+.form-control::placeholder {
+  color: white;
+  opacity: 1;
+}
+
+textarea{
+	background-color: grey;
+}
+
+.contact p{
+	font-weight: 700;
+	padding: 0;
+	margin: 0;
+	font-size: 17px;
+}
+
 
 
 
@@ -204,6 +321,15 @@
 		width: 30%;
 		
 	}
+	
+	.our-services-wrapper h3{
+		font-size: 50px;
+		
+	}
+	.gallery, .our-services, .about-us .container-fluid{
+	padding: 30px;
+}
+	
 }
 
 
@@ -211,7 +337,7 @@
 @media all and (max-width: 768px) {
 
 	.header {
-		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background.png);	
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/background.png);	
 	}
 	
 	.info-header{
@@ -233,18 +359,14 @@
 	.btns-wrapper{
 		margin: 10px 0;
 	}
-	
-
-
-
-	
+		
 }
 
 @media all and (max-width: 556px){
 	
 	.header {
 		height: 100vh;
-		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background.png);
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(../img/background.png);
 		background-size: cover;
 		background-position: center;
 	}
@@ -266,7 +388,13 @@
 		font-size: 55px;
 	}
 
-	
+	.gallery, .our-services, .blog, .contact, .about-us .container-fluid{
+	padding: 0;
+}
+.subscribe-row{
+	padding: 20px;
+}
+
 	
 }
 
