--- a/style.css
+++ b/style.css
@@ -1,385 +1,159 @@
-*{
-	font-family: 'Raleway', sans-serif;
-}
 
-/*-----HOME-PAGE-BACKGROUND-----*/
-#header {
-	height: 100vh;
-	background-image: url(img/background.png);
-	background-size: cover;
-	background-position: center;
-}
-/*-----HOME-PAGE-BACKGROUND-----*/
+@media all and (max-width: 992px) {
 
-/*-----NAVIGATION-----*/
-.navbar{
-	padding-left: 45px;
-	padding-right: 45px;
-	background-color: #ffffff;
-}
-/*-----NAVIGATION-----*/
-
-
-/*-----WRAPPER-STYLING-----*/
-.info-wrapper{
-	margin-top: 200px;
-	margin-left: 15px;
-}
-
-.about-us-wrapper{
-	text-align: left;
-	padding-bottom: 20px;
-	align-self: center;
-}
-
-.row{
-	padding: 0;
-	margin: 0;
-	justify-content: center;
-}
-
-.gallery, .our-services, .blog, .contact .container-fluid{
-	padding: 50px;
-}
-
-.gallery .col-8{
-	margin-bottom: 50px;
-}
-
-
-
-.subscribe-row{
-	padding: 100px;
-}
-
-/*-----FOOTER-STYLING----*/
-
-footer{
-	background-color: #262626;
-	color: #b9b9b9;
-	font-size: 16px;
-}
-footer span{
-	color: red;
-}
-
-footer p{
-	margin: 0;
-	padding: 0;
-	line-height: 27px;
-}
-
-footer p{
-	white-space: nowrap;
-}
-/*-----FOTER-STYLING----*/
-
-
-
-/*-----FORM-STYLING----*/
-.contact .form-control{
-	margin: 10px;
-	border-radius: 0;
-	background-color:  rgba(0, 196, 196, 0.3);
-	font-size: 17px;
-}
-
-.form-control::placeholder {
-  color: white;
-  opacity: 1;
-}
-
-textarea{
-	background-color: grey;
-}
-
-.subscribe input{
-	border-radius: 0;
-	border: 1px solid #262626;
-}
-/*-----FORM-STYLING----*/
-
-
-
-/*-----MOUSE-ICON-----*/
-.mouse-icon{
-	position: absolute;
-	left: 50%;
-	bottom: 40px;
-}
-/*-----MOUSE-ICON-----*/
-
-
-
-/*-----SECTIONS-BACKGROUND-----*/
-
-.about-us{
-	background-color:  #00c4c4;
-}
-
-.our-services{
-	background-color:  #70bfff;;
-}
-
-.gallery{
-	background-color: #ffe92f;
-}
-
-.blog{
-	background-color: #b07cf7;
-}
-
-.contact{
-	background: url(img/contact-background.png);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-
-.subscribe{
-	background: url(img/subscribe-background.png);
-	background-repeat: no-repeat;
-	background-position: center;
-	background-size: cover;
-}
-
-/*-----END-OF-SECTIONS-BACKGROUND-----*/
-
-
-
-/*-----BUTTONS-STYLING-----*/
-
-.info-wrapper .btn{
-	background-color:  #ff6033;
-	width: 200px;
-	height: 55px;
-	color: #fff;
-	font-weight: 300;
-	font-size: 16px;
-	border-radius: 0;
-	margin-top: 20px;
-	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-}
-
-.our-services .btn{
-	font-size: 20px;
-	white-space: normal;
-	width:  80%;
-	display: flex;
-	padding: 0;
-	border: none;
-	border-radius: 0;
-	justify-content: space-between;
-	align-items: center;
-	margin-top: 20px;
-	box-shadow: 0px 4px 10px 0px rgba(0, 0, 0, 0.5);
-	color: #262626;
-	font-weight: 700;
-	background-color: #ffffff;
-	margin-left: auto;
-	margin-right: auto;
-}
-.btn-label{
-	display: flex;
-	width: 25%;
-	height: 100px;
-	align-items: center;
-	justify-content: center;
-	border-left: 1px solid #929292;
-	border-radius: 0;
-}
-
-.txt-btn{
-	width: 75%;
-	margin-left: auto;
-	margin-right: auto;
-	padding-left: 10px;
-	padding-right: 10px;
-}
-
-.btns-wrapper{
-	margin-top: 40px;
-	margin-bottom: 40px;
-}
-
-.gallery .btn{
-	background-color:  #5585a2;
-	width: 200px;
-	height: 45px;
-	color: #fff;
-	font-weight: 300;
-	font-size: 16px;
-	border-radius: 0;
-	margin: 30px;
-	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-}
-
-.subscribe .btn{
-	background-color: #96b92c;
-	border-radius: 0;
-	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-	color: #ffffff;
-}
-
-.blog .btn{
-	background-color:  #f72b3b;
-	width: 200px;
-	height: 45px;
-	color: #fff;
-	font-weight: 300;
-	font-size: 16px;
-	border-radius: 0;
-	margin-bottom: 50px;
-	box-shadow: 0px 2px 5px 0px rgba(0, 0, 0, 0.5);
-}
-
-/*-----END-OF-BUTTONS-STYLING-----*/
-	.gallery img{
-		padding: 5px;
+	.info-header h1{
+		font-size: 70px;
+	}
+	.btns-wrapper .btn{
+		width:  100%;
 	}
 
-/*-----TEXT-STYLING-----*/
+	.btn-label{
+		width: 30%;	
+	}
+	
+	.our-services-header h1{
+		font-size: 50px;	
+	}
 
-nav a{
-	font-weight: 700;
-	font-size: 16px;
+	.subscribe-header{
+	padding: 100px 0 100px 100px;	
 }
 
-.info-wrapper h1{
-	font-weight: 800;
-	font-size: 90px;
 }
 
-	.info-wrapper small{
+@media all and (max-width: 768px) {
+	
+	#subscribe{
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),url(img/subscribe-background.png);
+		
+	}
+	#header {
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background.png);	
+	}
+
+	.info-header{
+		text-align: center;
+	}
+	.info-header h1{
+		font-size: 60px;
+	}
+	.about-us-header{
+		text-align: center;
+		padding-bottom: 20px;
+	}
+
+	.our-services-header h1{
+		font-size: 70px;	
+	}
+
+	.blog-imgs img{
+		width: 100%;
+	}
+
+	.gallery-imgs img{
+		width: 100%;
+	}
+
+	.subscribe-header{
+		padding: 60px;
 		text-shadow: 0px 0px 1px #ffffff;
-		font-size: 17px;
 	}
 
-.about-us h1{
-	font-size: 70px;
-	font-weight: 700;
-	color: #fff;
-}
-
-	.about-us small{
-		font-size: 16px;
-		color: #ffffff;
+	.contact-data {
+		background-color: rgba(255,255,255,0.3);
+		text-align: center;
+		border-radius: 10px;
+		margin-bottom: 10px;
 	}
 
-.our-services h1{
-	font-size: 60px;
-	font-weight: 700;
-	position: absolute;
-	color: #fff;
-	white-space: nowrap;
-	top: 50%;
-	left: 50%;
-	transform: translate(-50%, -50%);
-	text-shadow: 1px 2px 5px #000000;
-}
-
-.gallery h1{
-	color: #262626;
-	font-size: 90px;
-	font-weight: 700;
-}
-
-	.gallery small{
-		font-size: 16px;
-		color: #000000;
+	.caption p{
+		padding: 20px;
+		font-size: 35px;
 	}
 
-.subscribe h1{
-	color: #262626;
-	font-size: 40px;
+	.btns-wrapper{
+		margin: 0;
+	}
+			
 }
-	.subscribe small{
-		color: #262626;
-		font-size: 17px
+
+@media all and (max-width: 556px){
+	
+	.info-header h1{
+		font-size: 50px;
 	}
 
-.blog h1{
-	color:  #ffffff;
-	font-size: 90px;
-	font-weight: 700;
-}
-
-	.blog small{
-		color: #ffffff;
-		font-size: 17px;
-		font-weight: 300;
-		text-align: justify;
+	.about-us-header h1 {
+    	font-size: 60px;
 	}
 
-.contact h1{                        
-	color:  #000000;
-	font-size: 90px;
-	font-weight: 700;
-}
-								
-	.contact small{
-		color: #000000;
-		font-size: 17px;
-		font-weight: 300;
-		text-align: justify;
+	.about-us-header small {
+    	font-size: 14px;
 	}
 
-.contact p{
-	font-weight: 700;
-	padding: 0;
-	margin: 0;
-	font-size: 17px;
+	.gallery-header h1 {
+    	font-size: 60px;
+	}
+
+	.gallery-header small {
+    	font-size: 14px;
+	}
+
+	.txt-btn {
+	    font-size: 15px;
+	}
+
+	.our-services-header h1{
+		font-size: 50px;
+	}
+
+	.subscribe-section{
+		padding: 20px;
+	}
+
+	.btn{
+		margin: 10px;
+	}
+
+	
+	.btn-label{
+		height: 80px;
+	}
+
+	.blog-header h1 {
+    	font-size: 60px;  
+	}
+
+	.blog-header small {
+    	font-size: 14px;  
+	}
+
+	.subscribe-header small {
+	    font-size: 14px;
+	}
+
+	.contact-header h1 {
+	    font-size: 60px;  
+	}
+	
+	.contact-header small {
+	    font-size: 14px;  
+	}
+
+	#gallery, #our-services, #blog, #contact .container{
+		padding-top: 20px;
+	}
+
+	.subscribe-header{
+		padding: 40px;
+		text-align: center;
+	}
+
+	.caption p{
+		padding: 15px;
+		font-size: 20px;
+	}
+
 }
-
-
-/*-----END-OF-TEXT-STYLING-----*/
-
-
-
-/*----OVERLINE-FROM-LEFT-EFFECT----*/
-
-li{
-  display: inline-block;
-  vertical-align: middle;
-  transform: translateZ(0);
-  box-shadow: 0 0 1px rgba(0, 0, 0, 0);
-  backface-visibility: hidden;
-  position: relative;
-  overflow: hidden;
-}
-li:before {
-  content: "";
-  position: absolute;
-  z-index: -1;
-  left: 0;
-  right: 100%;
-  top: 0;
-  background: #ff6033;
-  height: 4px;
-  transition-property: right;
-  transition-duration: 0.3s;
-  transition-timing-function: ease-out;
-}
-li:hover:before, li:focus:before, li:active:before {
-  right: 0;
-}
-
-/*----END-OF-OVERLINE-FROM-LEFT-EFFECT----*/
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
 
