--- a/style.css
+++ b/style.css
@@ -230,7 +230,10 @@ footer p{
 }
 
 /*----------BUTTONS-STYLING----------*/
-
+button:hover{
+	cursor: pointer;
+}
+	
 .info-btn{
 	background-color:  #ff6033;
 	width: 200px;
