--- a/responsive.css
+++ b/responsive.css
@@ -25,11 +25,11 @@
 @media all and (max-width: 768px) {
 	
 	#subscribe{
-		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),url(img/subscribe-background.png);
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),url(img/subscribe-background-min.png);
 		
 	}
 	#header {
-		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background.png);	
+		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)), url(img/background-min.png);	
 	}
 
 	.info-header{
