--- a/responsive.css
+++ b/responsive.css
@@ -24,6 +24,9 @@
 
 @media all and (max-width: 768px) {
 	
+	button:hover{
+		cursor: pointer;
+	}
 	#subscribe{
 		background-image: linear-gradient(rgba(255, 255, 255, 0.7), rgba(255, 255, 255, 0.7)),url(img/subscribe-background-min.png);
 		
